--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,7 @@
     <string name="pref_title_favourite_social">Favourite social network</string>
 
     <string name="pref_default_favourite_social">https://plus.google.com</string>
+    <string name="action_backup_notes">Backup notes</string>
+    <string name="action_upload_notes">Upload notes</string>
 
 </resources>
